feat(backend): complete Phase B4 data seeding, CORS & wire-level verification - backend locked